dummy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dummy
  labels:
    app: kubed
