dummy/dummy-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http-svc
  namespace: dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-svc
  template:
    metadata:
      labels:
        app: http-svc
    spec:
      containers:
      - name: http-svc
        image: gcr.io/google_containers/echoserver:1.8
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  namespace: dummy
  labels:
    app: http-svc
#  annotations:
#    plugins.konghq.com: add-ratelimiting-to-route
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: http-svc
